Reverting to old mobile view

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Find out about the developer, Andrew Rotert.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, south dakota, published, engineering, college, development">
     <meta name="author" content="Andrew Rotert">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
     <title>Developed Not Downlaoded | About The Developer</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
