--- a/Android.html
+++ b/Android.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Find out about Andrew Rotert's Android projects. Currently I have one published project focused on lift coefficient calculations.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, lift coefficient, published, engineering, android, projects, development">
     <meta name="author" content="Andrew Rotert">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
     <title>Developed Not Downlaoded | Android Projects</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
