--- a/BusinessPlan.html
+++ b/BusinessPlan.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Andrew Rotert's 2020 business plan competition submission.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, business plan, published, engineering, web, projects, development">
     <meta name="author" content="Andrew Rotert">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
     <title>Developed Not Downlaoded | Business Plan</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
