--- a/HolidayClicker.html
+++ b/HolidayClicker.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Find out about Holiday Clicker. An iOS based game. Website contains screenshots, support, and privacy policy.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, Holiday Clicker, published, engineering, iOS, projects, development, game">
     <meta name="author" content="Andrew Rotert">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
     <title>Developed Not Downlaoded | Holiday Clicker App</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
