--- a/PutterFitter.html
+++ b/PutterFitter.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Find out about Putter Fitter. An iOS based fitting tool. Website contains screenshots, support, and privacy policy.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, Putter Fitter, published, engineering, iOS, projects, development, AI">
     <meta name="author" content="Andrew Rotert">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
     <title>Developed Not Downlaoded | Putter Fitter App</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
