--- a/iOS.html
+++ b/iOS.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Find out about Andrew Rotert's iOS projects. Currently I have six published projects focused on trap shooting, computer science, game design, gps, golfing, and augmented reality.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, iOS, published, engineering, apple, projects, development">
     <meta name="author" content="Andrew Rotert">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
     <title>Developed Not Downlaoded | iOS Projects</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
