Redid mobile designs

--- a/AugmentedRealityVisualizer.html
+++ b/AugmentedRealityVisualizer.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Find out about Augmented Reality Visualizer. An iOS app focused on an AR experience. Website contains screenshots, support, and privacy policy.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, Augmented Reality Visualizer, published, engineering, iOS, projects, development">
     <meta name="author" content="Andrew Rotert">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Developed Not Downlaoded | Augmented Reality Visualizer App</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
+        <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
         <hr class="nav" />
     </div>
 
