--- a/TrapshootingScorecard.html
+++ b/TrapshootingScorecard.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Find out about Trap Shooting Scorecard. An iOS based scoring app. Website contains screenshots, support, and privacy policy.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, Trap Shooting Scorecard, published, engineering, iOS, projects, development, trapshooting">
     <meta name="author" content="Andrew Rotert">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Developed Not Downlaoded | Trap Shooting Scorecard App</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
+        <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
         <hr class="nav" />
     </div>
 
