--- a/ComputerScienceCalculator.html
+++ b/ComputerScienceCalculator.html
@@ -10,7 +10,7 @@ body {
     <meta name="description" content="Find out about Computer Science Calculator. An iOS app focused on an necessary computer science calculations. Website contains screenshots, support, and privacy policy.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, Computer Science Calculator, published, engineering, iOS, projects, development">
     <meta name="author" content="Andrew Rotert">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Developed Not Downlaoded | Computer Science Calculator App</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
@@ -29,7 +29,7 @@ body {
 </head>
 <body>
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
+        <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
         <hr class="nav" />
     </div>
 
