--- a/Other.html
+++ b/Other.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Find out about Andrew Rotert's projects. I have worked on many projects acoss many platforms.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, iOS, published, engineering, android, projects, development, c#">
     <meta name="author" content="Andrew Rotert">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Developed Not Downlaoded | Other Projects</title>
     <link rel="icon" type="image/x-icon" href="Images/weblogo180.png" />
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
+        <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
         <hr class="nav" />
     </div>
 
