--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body {
     <meta name="description" content="Platform to showcase Andrew Rotert's published software, personal projects, and resume. Andrew has seven published apps, across iOS and Android platforms. Visit the website to learn more.">
     <meta name="keywords" content="developer, Andrew Rotert, software, DSU, dakota state university, android, published, engineering, iOS, projects, development, web, personal, website">
     <meta name="author" content="Andrew Rotert">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Developed Not Downlaoded | Home</title>
     <!-- <link rel="icon" type="image/x-icon" href="Images/DevLogo.ico" />-->
@@ -26,8 +26,7 @@ body {
     <link rel="stylesheet" href="Styles/defaults.css" />
     <link rel="stylesheet" href="Styles/IndexLayout.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script>
-if (document.location.hostname.includes("cs-developer") && document.referrer == "") {
+    <script>if (document.location.hostname.includes("cs-developer") && document.referrer == "") {
             document.location.href = "http://cs-developer.info/AboutMe.html"
         }
         if (document.location.hostname.includes("projects.cs-developer") && document.referrer == "") {
@@ -41,7 +40,7 @@ if (document.location.hostname.includes("cs-developer") && document.referrer == 
 <body>
 
     <div>
-        <center><img src="Images/DevelopedNotDownloaded.png" height="300" alt="Logo" /></center>
+        <center><img src="Images/DevelopedNotDownloaded.png" class="logo" alt="Logo" /></center>
         <hr class="nav" />
     </div>
 
