--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ body {
             <hr class="indexBottom" />
         </div>
 
-        <div id="grid-image1" >
+        <div id="grid-image1">
             <img class="resizing" src="Images/Support.png" alt="Mobile App Support" />
         </div>
         <div id="grid-content1">
@@ -107,6 +107,29 @@ body {
         </div>
 
     </footer>
+
+    <div style="display:none">
+        <hr />
+        <table style="width:100%">
+            <tr>
+                <td><a href="index.html">Home</a></td>
+                <td><a href="PutterFitter.html">Putter Fitter</a></td>
+                <td><a href="TrapshootingScorecard.html">Trapshooting Scorecard</a></td>
+                <td><a href="ComputerScienceCalculator.html">Computer Science Calculator</a></td>
+                <td><a href="SpeedometerPlusMap.html">Speedometer Plus Map</a></td>
+                <td><a href="HolidayClicker.html">Holiday Clicker</a></td>
+                <td><a href="AugmentedRealityVisualizer.html">AR Visualizer</a></td>
+                <td><a href="LiftCoefficientCalculator.html">Lift Coefficient Calculator</a></td>
+                <td><a href="Projects.html">Projects</a></td>
+                <td><a href="iOS.html">iOS Projects</a></td>
+                <td><a href="Android.html">Android Projects</a></td>
+                <td><a href="Other.html">Other Projects</a></td>
+                <td><a href="BusinessPlan.html">Business Plan</a></td>
+                <td><a href="AboutMe.html">About Me</a></td>
+                <td><a href="ContactUs.html">Contact Us</a></td>
+            </tr>
+        </table>
+    </div>
 
     <script src="Dynamic/NavigationBarJS.js"></script>
 
