--- a/Dynamic/NavigationBar.html
+++ b/Dynamic/NavigationBar.html
@@ -151,7 +151,7 @@
                 <a href="Other.html">Other Projects</a>
             </div>
         </li>
-        <li class="navitem" id="App-Page"><a href="app">Counter</a></li>
+        <li class="navitem" id="App-Page"><a href="app">App API</a></li>
         <li class="navitem" id="Business-Page"><a href="BusinessPlan.html">Business Plan</a></li>
         <li class="navitem" id="About-Page"><a href="AboutMe.html">About Me</a></li>
         <li class="navitem" id="Contact-Page"><a href="ContactUs.html">Contact Us</a></li>
