Updated app support page

--- a/HolidayClicker.html
+++ b/HolidayClicker.html
@@ -51,7 +51,7 @@
             <h2 class="pages"><object id="screen_page_link">Screenshots</object></h2>
         </div>
         <div id="grid-screenshot1">
-            <img class="gridsize" src="Images/HS/One.png" />
+            <img class="gridsize" src="Images/HS/One.gif" />
         </div>
         <div id="grid-screenshot2">
             <img class="gridsize" src="Images/HS/Two.png" />
@@ -63,7 +63,7 @@
             <img class="gridsize" src="Images/HS/Four.png" />
         </div>
         <div id="grid-screenshot5">
-            <!--Not Used-->
+            <img class="gridsize" src="Images/HS/Five.png" />
         </div>
 
         <div id="grid-about">
@@ -74,20 +74,40 @@
                 <p><strong><a href="https://apps.apple.com/us/app/holiday-clicker/id1490141107">Download from the App Store here.</a></strong></p>
                 <h3>App Description</h3>
                 <p>
-                    Tap the falling objects before they reach the ground. More objects will continue to fall, each object gives you more points.
+                    Tap the falling objects before they reach the bottom of the device. The more you tap, the faster they fall. Each object gives you some points. Press and hold to get bonus points, but risk losing control over the other objects.
                 </p>
                 <p>
-                    Experience a new holiday theme each month.
+                    Holiday Clicker has a new holiday theme for each month. Chose any theme that you wish, or allow the app to automatically select the theme for the current month.
                 </p>
                 <p>
-                    Unlock the special promotional theme once you have reached a high score of 10000.
+                    Unlock the special promotional theme once you have reached a high score of 10000. Very few players can reach this score, can you?
+                </p>
+                <p>
+                    Be careful, objects can leave the side of your screen, but watch out they may come back.
                 </p>
 
                 <h3>Now Includes</h3>
+
                 <p>Recent updates have added the following:</p>
                 <ul>
-                    <li>Holiday themed screenshots</li>
-                    <li>Updated Privacy Policy</li>
+                    <li>
+                        Big Changes: <ul>
+                            <li>As you level up, the speed of the objects increase. Whats the highest level you can reach?</li>
+                            <li>You can now track how many objects you have collected.</li>
+                            <li>You can now track how many active objects are left to collect.</li>
+                            <li>
+                                Two ways to collect points: <ul>
+                                    <li>Tapping the objects</li>
+                                    <li>Tapping and holding the objects for bonus points</li>
+                                </ul>
+                            </li>
+
+                        </ul>
+                    </li>
+                    <li>Updated screenshots.</li>
+                    <li>Cosmetic changes.</li>
+                    <li>Bug Fixes</li>
+                    <li>New Privacy Policy</li>
                 </ul>
             </div>
         </div>
