Modified projects views

--- a/Dynamic/HTML/AndroidPlaceholder.html
+++ b/Dynamic/HTML/AndroidPlaceholder.html
@@ -7,6 +7,7 @@
                 <h2><i>Lift Force Calculator</i></h2>
                 <p>Published: <a href="LiftCoefficientCalculator.html">Support Page</a></p>
                 <p>View at the Google Play Store: <a href="https://play.google.com/store/apps/details?id=com.ar.liftcalculator">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/Lift-Coefficient-Calculator">View Repository</a></p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
