--- a/Dynamic/HTML/OtherPlaceholder.html
+++ b/Dynamic/HTML/OtherPlaceholder.html
@@ -5,7 +5,7 @@
             <center>
                 <img class="resizing" src="Images/Projects/GripFinder2.png" alt="Grip Finder" />
                 <h2><i>Grip Finder</i></h2>
-                <p>View progress on Github: <a href="https://github.com/ajrotert/Grip-Finder">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/Grip-Finder">View Repository</a></p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
@@ -24,7 +24,7 @@
             <center>
                 <img class="resizing" src="Images/Projects/Minesweeper.png" alt="Minesweeper" />
                 <h2><i>Minesweeper</i></h2>
-                <p>View progress on Github: <a href="https://github.com/ajrotert/AR.Minesweeper">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/AR.Minesweeper">View Repository</a></p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
@@ -43,7 +43,7 @@
             <center>
                 <img class="resizing" src="Images/Projects/Tsharp.png" alt="Tsharp" />
                 <h2><i>Tsharp</i></h2>
-                <p>View progress on Github: <a href="https://github.com/ajrotert/Language-Processing">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/Language-Processing">View Repository</a></p>
                 <p>Language Used: Yacc, Lex, C</p>
                 <p>About:</p>
                 <p class="just">
@@ -62,7 +62,7 @@
             <center>
                 <img class="resizing" src="Images/Projects/Golf2.png" alt="Mini-Golf" />
                 <h2><i>Mini-Golf</i></h2>
-                <p>View progress on Github: <a href="https://github.com/ajrotert/Assembely">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/Assembely">View Repository</a></p>
                 <p>Language Used: Assembly x86</p>
                 <p>About:</p>
                 <p class="just">
@@ -81,7 +81,7 @@
             <center>
                 <img class="resizing" src="Images/Projects/Website2.png" alt="Website" />
                 <h2><i>Developed Not Download</i></h2>
-                <p>View progress on Github: <a href="https://github.com/ajrotert/Developed-Not-Downloaded">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/Developed-Not-Downloaded">View Repository</a></p>
                 <p>Language Used: HTML5, CSS3</p>
                 <p>About:</p>
                 <p class="just">
@@ -99,7 +99,7 @@
             <center>
                 <img class="resizing" src="Images/Projects/FireChat.png" alt="Website" />
                 <h2><i>FireChat</i></h2>
-                <p>View progress on Github: <a href="https://github.com/ajrotert/ConnectingWebsiteToFirebase">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/ConnectingWebsiteToFirebase">View Repository</a></p>
                 <p>Language Used: HTML5, CSS3, JavaScript</p>
                 <p>About:</p>
                 <p class="just">
@@ -117,7 +117,7 @@
             <center>
                 <img class="resizing" src="Images/Projects/ClientHost.png" alt="Website" />
                 <h2><i>Client / Host Communication</i></h2>
-                <p>View progress on Github: <a href="https://github.com/ajrotert/BasicClientServerConnections">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/BasicClientServerConnections">View Repository</a></p>
                 <p>Language Used: Java</p>
                 <p>About:</p>
                 <p class="just">
@@ -137,7 +137,7 @@
                 <img class="resizing" src="Images/Projects/NumericDetector.png" alt="Website" />
                 <h2><i>Numeric Detector</i></h2>
                 <p>Live Demonstration: <a href="https://codepython.life">Visit Now</a></p>
-                <p>View progress on Github: <a href="https://github.com/ajrotert/NumberDetection">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/NumberDetection">View Repository</a></p>
                 <p>Language Used: JavaScript, HTML5, CSS3</p>
                 <p>About:</p>
                 <p class="just">
