--- a/Dynamic/HTML/iOSPlaceholder.html
+++ b/Dynamic/HTML/iOSPlaceholder.html
@@ -7,6 +7,7 @@
                 <h2><i>Putter Fitter</i></h2>
                 <p>Published: <a href="PutterFitter.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://itunes.apple.com/us/app/putter-fitter/id1448329273?mt=8">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/Putter-Fitting-IOS">View Repository</a></p>
                 <p>Language Used: C#, SQLite</p>
                 <p>About:</p>
                 <p class="just">
@@ -27,6 +28,7 @@
                 <h2><i>Trap Shooting Scorecard</i></h2>
                 <p>Published: <a href="TrapshootingScorecard.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://itunes.apple.com/us/app/trap-shooting-scorecard/id1450821405?mt=8">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/TrapShootingScorecard-IOS">View Repository</a></p>
                 <p>Language Used: C#, SQLite</p>
                 <p>About:</p>
                 <p class="just">
@@ -47,6 +49,7 @@
                 <h2><i>Computer Science Calculator</i></h2>
                 <p>Published: <a href="ComputerScienceCalculator.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://itunes.apple.com/us/app/computer-science-converter/id1451753843?mt=8">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/Computer-Science-Calculator">View Repository</a></p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
@@ -67,6 +70,7 @@
                 <h2><i>Simple Speedometer Plus Map</i></h2>
                 <p>Published: <a href="SpeedometerPlusMap.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://apps.apple.com/us/app/simple-speedometer-and-map/id1485405938">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/Simple-Speedometer-and-Map">View Repository</a></p>
                 <p>Language Used: C#</p>
                 <p>About:</p>
                 <p class="just">
@@ -87,6 +91,7 @@
                 <h2><i>Holiday Clicker</i></h2>
                 <p>Published: <a href="HolidayClicker.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://apps.apple.com/us/app/holiday-clicker/id1490141107">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/Holiday-Clicker">View Repository</a></p>
                 <p>Language Used: C#, SQLite</p>
                 <p>About:</p>
                 <p class="just">
@@ -107,6 +112,7 @@
                 <h2><i>On The Hunt</i></h2>
                 <p>Not Yet Published</p>
                 <p>View progress on Github: <a href="https://github.com/ajrotert">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/On-The-Hunt">View Repository</a></p>
                 <p>Language Used: C#, SQLite</p>
                 <p>About:</p>
                 <p class="just">
@@ -127,6 +133,7 @@
                 <h2><i>Augmented Reality Visualizer</i></h2>
                 <p>Published: <a href="AugmentedRealityVisualizer.html">Support Page</a></p>
                 <p>View at the App Store: <a href="https://apps.apple.com/us/app/augmented-reality-visualizer/id1515131292">Visit Now</a></p>
+                <p>See the code: <a href="https://github.com/ajrotert/AugmentedReality">View Repository</a></p>
                 <p>Language Used: Swift</p>
                 <p>About:</p>
                 <p class="just">
