Updated data, fixed error with loading content

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -43,16 +43,17 @@
         </div>
 
         <div id="grid-image">
-            <img class="resizing" src="Images/Bio.png" alt="Image of the developer" />
+            <center><img class="portfolio" src="Images/Bio copy.png" alt="Image of the developer" /></center>
         </div>
         <div id="grid-content">
             <center><p class="bio">Short Bio:</p></center>
             <p class="just bio">
-                I am from Sioux Falls, SD. I got into programming because I like to problem solve. I am currently majoring in computer science and applied mathematics at Dakota State University.
+                I am from Sioux Falls, SD. I got into programming in high school with my ability to problem solve. I am currently majoring in computer science and applied mathematics at Dakota State University.
                 I enjoy taking on new challenges and learning new techniques to solve them. Over my sophomore year of college, after completing Object Oriented design, I got into mobile app
-                development. I currently have six published iOS apps, and one published Android app. Now in my third year I built this website as way to show my work, as well support pages
-                for my published applications.
+                development. This has lead to me getting six iOS apps published, and one published Android app. Durning my third year I started and completed many new projects, including this website as way to show my work and support
+                for my published applications. I look forward to new challenges with every project I start.
             </p>
+            <a href="Projects.html" class="projectsLink">View my projects page here.</a>
         </div>
 
         <div id="grid-main">
