--- a/ComputerScienceCalculator.html
+++ b/ComputerScienceCalculator.html
@@ -118,6 +118,15 @@ body {
                     <li>Shows Broadcast ID and host range for each subnet ID</li>
                     <li>Shows the total number of bits stolen, and the total number of hosts</li>
                 </ul>
+                <p>Bitwise Conversions</p>
+                <ul>
+                    <li>AND</li>
+                    <li>OR</li>
+                    <li>XOR</li>
+                    <li>NOT</li>
+                    <li>LEFT shift</li>
+                    <li>RIGHT shift</li>
+                </ul>
                 <p>
                     Good for computer science related tasks.
                 </p>
@@ -125,6 +134,7 @@ body {
                     <li>Networking</li>
                     <li>Assembly Language</li>
                     <li>Language Processing</li>
+                    <li>Operating Systems</li>
                     <li>etc.</li>
                 </ul>
 
@@ -136,6 +146,7 @@ body {
                     <li>Added subnetting.</li>
                     <li><ul><li>Find subnets under IP conversions, enter how many subnets you are looking for.</li><li>Shows subnet ID (Binary and Decimal)</li><li>Broadcast ID, Host Range</li></ul></li>
                     <li>Added binary conversions for text.</li>
+                    <li>Added bitwise calculations.</li>
                     <li>Updated Privacy Policy</li>
                 </ul>
             </div>
