--- a/TrapshootingScorecard.html
+++ b/TrapshootingScorecard.html
@@ -101,12 +101,16 @@
                     <li>
                         Stores past results
                     </li>
+                    <li>
+                        Export your rounds results into a CSV file, send that via email.
+                    </li>
                 </ul>
                 <h3>Now Includes</h3>
                 <p>Recent updates have added the following:</p>
                 <ul>
                     <li>View past results</li>
                     <li>Dark mode support</li>
+                    <li>Ability to export results into a CSV file</li>
                     <li>Updated Privacy Policy</li>
                 </ul>
             </div>
