Updated resume styles

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -65,75 +65,105 @@
                     <h3>(605) 215-8188</h3>
                     <h3>Andrew.Rotert@trojans.dsu.edu</h3>
                 </center>
+                <hr class="resume-break" />
 
-                <h2>Education</h2>
-                <p>Dakota State University, Madison SD: August 2017 to present</p>
-                <ul>
-                    <li>Beacom College of Computer and Cyber Sciences</li>
-                </ul>
-                <p>
-                    Major: Computer Science: Expected Graduation May 2021
-                </p>
-                <p>Major: Applied Mathematics</p>
-                <p>G.P.A: 3.89</p>
-                <h2>Computer Skills</h2>
-                <ul>
-                    <li>
-                        Programming experience with:
-                        <ul>
-                            <li>C#(Advanced), C/C++(Advanced), Python(Intermediate) and Java(Intermediate)</li>
-                        </ul>
-                    </li>
-                    <li>
-                        Use with:
-                        <ul>
-                            <li>Visual Studio, Command Line, and XCode</li>
-                        </ul>
-                    </li>
-                </ul>
-                <h2>Related Coursework</h2>
-                <ul>
-                    <li>Computer Science I & II, Object Oriented Design, Data Structures, Systems Analyst and Design, Software Engineering, Algorithms and Optimization, Machine Learning Fundamentals, Web Applications, Database Management</li>
-                    <li>Info Security Fundamentals, Assembly, Networking, Operating Systems</li>
-                    <li>Calculus I, Calculus II, Introduction to Discrete Math, Introduction to Statistics, Discrete Mathematics, and Signals and Systems</li>
-                </ul>
-                <h2>Projects</h2>
-                <p>View my projects <a href="Projects.html">here</a></p>
-                <ul>
-                    <li>
-                        iOS App Development
-                        <ul>
-                            <li>https://itunes.apple.com/us/developer/andrew-rotert/id1448329272</li>
-                            <li>Developed and published multiple apps using concepts learned in Object Orientated Programming, Data Structures, and Assembly.</li>
-                        </ul>
-                    </li>
-                    <li>
-                        Programming Competitions
-                        <ul>
-                            <li>
-                                Competed in multiple programing competitions:
-                                <ul><li>ACM Regional, DSU local competition, Google Hashcode, MCIS, and Google CodeJam</li></ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        Window Forms Projects
-                        <ul><li>Developed multiple windows forms using concepts learned in Object Orientated Programming and Data Structures.</li></ul>
-                    </li>
-                    <li>
-                        Android App Development
-                        <ul><li>Using concepts learned in Data Structures and from other projects, developed and published an Android mobile application.</li></ul>
-                    </li>
-                </ul>
-                <h2>Involvements and Memberships</h2>
-                <ul>
-                    <li>General Beadle Honors program at DSU</li>
-                    <li>DSU Golf Team</li>
-                    <li>DSU Programming Club</li>
-                </ul>
-                <h2>Work Experience</h2>
-                <p>Austads Golf: December 2013 to present</p>
-                <p>Position: Retail Sales Associate</p>
+                <h2 class="resume-heading">Education</h2>
+                <div id="pt1-education" onclick="toggleContent(event)">
+                    <p>Dakota State University, Madison SD: August 2017 to present</p>
+                    <ul>
+                        <li>Beacom College of Computer and Cyber Sciences</li>
+                    </ul>
+                    <p>
+                        Major: Computer Science: Expected Graduation May 2021
+                    </p>
+                    <p>Major: Applied Mathematics</p>
+                    <p>G.P.A: 3.89</p>
+                </div>
+                <div id="pt1-education-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
+                <hr class="resume-break" />
+
+                <h2 class="resume-heading">Computer Skills</h2>
+                <div id="pt2-skills" onclick="toggleContent(event)">
+                    <ul>
+                        <li>
+                            Programming experience with:
+                            <ul>
+                                <li>C#(Advanced), C/C++(Advanced), Python(Intermediate) and Java(Intermediate)</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Use with:
+                            <ul>
+                                <li>Visual Studio, Command Line, and XCode</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div id="pt2-skills-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
+                <hr class="resume-break" />
+
+                <h2 class="resume-heading">Related Coursework</h2>
+                <div id="pt3-course" onclick="toggleContent(event)">
+                    <ul>
+                        <li>Computer Science I & II, Object Oriented Design, Data Structures, Systems Analyst and Design, Software Engineering, Algorithms and Optimization, Machine Learning Fundamentals, Web Applications, Database Management</li>
+                        <li>Info Security Fundamentals, Assembly, Networking, Operating Systems</li>
+                        <li>Calculus I, Calculus II, Introduction to Discrete Math, Introduction to Statistics, Discrete Mathematics, and Signals and Systems</li>
+                    </ul>
+                </div>
+                <div id="pt3-course-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
+                <hr class="resume-break" />
+
+                <h2 class="resume-heading">Projects</h2>
+                <div id="pt4-projects" onclick="toggleContent(event)">
+                    <p>View my projects <a href="Projects.html">here</a></p>
+                    <ul>
+                        <li>
+                            iOS App Development
+                            <ul>
+                                <li>https://itunes.apple.com/us/developer/andrew-rotert/id1448329272</li>
+                                <li>Developed and published multiple apps using concepts learned in Object Orientated Programming, Data Structures, and Assembly.</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Programming Competitions
+                            <ul>
+                                <li>
+                                    Competed in multiple programing competitions:
+                                    <ul><li>ACM Regional, DSU local competition, Google Hashcode, MCIS, and Google CodeJam</li></ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            Window Forms Projects
+                            <ul><li>Developed multiple windows forms using concepts learned in Object Orientated Programming and Data Structures.</li></ul>
+                        </li>
+                        <li>
+                            Android App Development
+                            <ul><li>Using concepts learned in Data Structures and from other projects, developed and published an Android mobile application.</li></ul>
+                        </li>
+                    </ul>
+                </div>
+                <div id="pt4-projects-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
+                <hr class="resume-break" />
+
+                <h2 class="resume-heading">Involvements and Memberships</h2>
+                <div id="pt5-involvement" onclick="toggleContent(event)">
+                    <ul>
+                        <li>General Beadle Honors program at DSU</li>
+                        <li>DSU Golf Team</li>
+                        <li>DSU Programming Club</li>
+                    </ul>
+                </div>
+                <div id="pt5-involvement-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
+                <hr class="resume-break" />
+
+                <h2 class="resume-heading">Work Experience</h2>
+                <div id="pt6-work" onclick="toggleContent(event)">
+                    <p>Austads Golf: December 2013 to present</p>
+                    <p>Position: Retail Sales Associate</p>
+                </div>
+                <div id="pt6-work-carrot" onclick="toggleContent(event)"> <center> <p>&#x2571&#x2572</p> </center></div>
+                <hr class="resume-break" />
 
             </div>
         </div>
@@ -147,9 +177,12 @@
 
     </footer>
 
+    <script src="Dynamic/HideShowContent.js"></script>
+
     <script src="Dynamic/NavigationBarJS.js"></script>
 
     <script src="Dynamic/NavBar.js"></script>
+
 
 </body>
 </html>
